Small comments changes

--- a/model_evaluation_meld.ipynb
+++ b/model_evaluation_meld.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "071f4ab9",
    "metadata": {},
    "outputs": [
@@ -39,12 +39,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "============================================================\n",
       "EVALUATING: MELD Dataset\n",
       "Results directory: results_meld\n",
       "Figures directory: figures_meld\n",
-      "Number of emotions: 7\n",
-      "============================================================\n"
+      "Number of emotions: 7\n"
      ]
     }
    ],
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "33b8f7e0",
    "metadata": {},
    "outputs": [
@@ -102,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ All required files found for MELD\n"
+      "All required files found for MELD\n"
      ]
     }
    ],
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9329f030",
    "metadata": {},
    "outputs": [
@@ -140,10 +138,10 @@
       "Loading MELD test data...\n",
       "\n",
       "MELD Test Data:\n",
-      "  Test samples: 2610\n",
-      "  Audio features shape: (2610, 47, 1)\n",
-      "  Text features shape: (2610, 5)\n",
-      "  Number of emotions: 7\n",
+      "Test samples: 2610\n",
+      "Audio features shape: (2610, 47, 1)\n",
+      "Text features shape: (2610, 5)\n",
+      "Number of emotions: 7\n",
       "\n",
       "Emotion distribution:\n",
       "  anger       :  345 samples (13.2%)\n",
@@ -183,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5b64078e",
    "metadata": {},
    "outputs": [
@@ -192,17 +190,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Loading MELD models...\n",
+      "Loading MELD models\n",
       "✓ Models loaded successfully\n",
       "\n",
       "Model architectures:\n",
-      "  Baseline input shape: (None, 47, 1)\n",
-      "  Multimodal input shapes: [TensorShape([None, 47, 1]), TensorShape([None, 5])]\n",
-      "✓ Models loaded successfully\n",
-      "\n",
-      "Model architectures:\n",
-      "  Baseline input shape: (None, 47, 1)\n",
-      "  Multimodal input shapes: [TensorShape([None, 47, 1]), TensorShape([None, 5])]\n"
+      "Baseline input shape: (None, 47, 1)\n",
+      "Multimodal input shapes: [TensorShape([None, 47, 1]), TensorShape([None, 5])]\n"
      ]
     }
    ],
@@ -229,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d37f5318",
    "metadata": {},
    "outputs": [
@@ -238,12 +231,9 @@
      "output_type": "stream",
      "text": [
       "Generating predictions...\n",
-      "✓ Predictions generated\n",
-      "  Baseline predictions shape: (2610, 7)\n",
-      "  Multimodal predictions shape: (2610, 7)\n",
-      "✓ Predictions generated\n",
-      "  Baseline predictions shape: (2610, 7)\n",
-      "  Multimodal predictions shape: (2610, 7)\n"
+      "Predictions generated\n",
+      "Baseline predictions shape: (2610, 7)\n",
+      "Multimodal predictions shape: (2610, 7)\n"
      ]
     }
    ],
@@ -273,26 +263,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "27b3d627",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "============================================================\n",
-      "MELD - Performance Comparison\n",
-      "============================================================\n",
-      "         Model  Accuracy  Precision   Recall  F1-Score Improvement (%)\n",
-      "  Baseline CNN  0.486973   0.391579 0.486973  0.336273               —\n",
-      "Multimodal CNN  0.498467   0.436177 0.498467  0.401393          +2.36%\n",
-      "\n",
-      "✓ Multimodal CNN outperforms Baseline by 2.36%\n",
-      "  → Text features provide complementary information!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate metrics for both models\n",
     "def calculate_metrics(y_true, y_pred, model_name):\n",
@@ -542,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9e628dd5",
    "metadata": {},
    "outputs": [
@@ -559,8 +533,6 @@
       " neutral      0.655712        0.662085     0.006373\n",
       " sadness      0.000000        0.076923     0.076923\n",
       "surprise      0.007092        0.134146     0.127054\n",
-      "\n",
-      "Saved: figures_meld/f1_score_comparison.png\n",
       "\n",
       "Saved: figures_meld/f1_score_comparison.png\n"
      ]
